Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I009202727ca65ba38beba375c7d6a976d9dacf18

--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -505,7 +505,7 @@
     <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Избор на ново закл. на екрана за служ. прил."</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"За допълнителна сигурност задайте резервна опция за заключване на екрана"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"Изберете резервния си начин на заключване на екрана"</string>
-    <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"Ако забравите опцията за заключване на екрана, системният администратор не може я да нулира."</string>
+    <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"Ако забравите опцията за заключване на екрана, системният администратор не може да я нулира."</string>
     <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"Задаване на отделно заключване за служебните приложения"</string>
     <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"Ако забравите тази опция за закл. на екрана, помолете сист. админ. да я нулира"</string>
     <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"Опции за заключване на екрана"</string>
@@ -1451,10 +1451,10 @@
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"Потвърждаване на паролата"</string>
     <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Потвърждаване"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Въведете фигурата на другото си устройство, за да прехвърлите профили в Google, настройки и др. Тя ще се шифрова."</string>
-    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Въведете ПИН кода на другото си устройство, за да прехвърлите профили в Google, настройки и др. Той ще се шифрова."</string>
+    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Въведете ПИН кода от другото си устройство, за да прехвърлите профили в Google, настройки и др. Той ще се шифрова."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Въведете паролата на другото си устройство, за да прехвърлите профили в Google, настройки и др. Тя ще се шифрова."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"Отключване на това у-во и с фигурата"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Отключване на това у-во и с ПИН кода"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Отключване на това у-во с ПИН кода"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"Отключване на това у-во и с паролата"</string>
     <string name="lockpassword_invalid_pin" msgid="7530854476819820600">"Грешен ПИН код"</string>
     <string name="lockpassword_invalid_password" msgid="1588184930542221687">"Грешна парола"</string>
