--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -1449,7 +1449,7 @@
     <string name="lockpassword_confirm_your_pattern_header_frp" msgid="5641858015891896427">"Հաստատեք նախշը"</string>
     <string name="lockpassword_confirm_your_pin_header_frp" msgid="8285647793164729982">"Հաստատեք PIN կոդը"</string>
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"Հաստատեք գաղտնաբառը"</string>
-    <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Հաստատեք՝ դուք եք"</string>
+    <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Անձի հաստատում"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Մուտքագրեք ձեր մյուս սարքի նախշը՝ Google հաշիվները, կարգավորումները և այլ տվյալներ տեղափոխելու համար։ Նախշը գաղտնագրված է։"</string>
     <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Մուտքագրեք ձեր մյուս սարքի PIN կոդը՝ Google հաշիվները, կարգավորումները և այլ տվյալներ տեղափոխելու համար։ PIN-ը գաղտնագրված է։"</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Մուտքագրեք ձեր մյուս սարքի գաղտնաբառը՝ Google հաշիվները, կարգավորումները և այլ տվյալներ տեղափոխելու համար։ Գաղտնաբառը գաղտնագրված է։"</string>
@@ -1831,7 +1831,7 @@
     <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"Ցուցադրման չափսը և տեքստը"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Կարգավորեք տեքստի ցուցադրումը"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Թեմա՝ Օդապարիկների ձևավորումներ"</string>
-    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Ումից՝ Բիլ"</string>
+    <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Ումից՝ Բագրատ"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Բարի լույս։\n\nԻնչպե՞ս են ընթանում ձևավորման աշխատանքները։ Դրանք ավարտված կլինե՞ն, նախքան կսկսենք մշակել նոր օդապարիկները։"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Զրոյացնել կարգավորումները"</string>
     <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"Ցուցադրման չափսը և տեքստի կարգավորումները զրոյացվել են"</string>
