--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -267,7 +267,7 @@
     <string name="safety_center_summary" msgid="3554867379951053869">"אבטחת אפליקציות, נעילת מכשיר, הרשאות"</string>
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"הפנים נוספו"</string>
     <string name="security_settings_face_preference_summary_none" msgid="523320857738436024">"צריך להגדיר זיהוי פנים"</string>
-    <string name="security_settings_face_preference_title" msgid="2126625155005348417">"פתיחה ע\"י זיהוי הפנים"</string>
+    <string name="security_settings_face_preference_title" msgid="2126625155005348417">"פתיחה בזיהוי פנים"</string>
     <string name="security_settings_face_profile_preference_title" msgid="7519527436266375005">"פתיחה ע\"י זיהוי הפנים לצורכי עבודה"</string>
     <string name="security_settings_face_enroll_education_title" msgid="6448806884597691208">"איך להגדיר פתיחה ע\"י זיהוי הפנים"</string>
     <string name="security_settings_face_enroll_education_title_accessibility" msgid="3701874093226957891">"הגדרת התכונה \'פתיחה ע\"י זיהוי הפנים\'"</string>
@@ -326,7 +326,7 @@
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"שימוש בפתיחה ע\"י זיהוי הפנים לצורך ביטול הנעילה של הטלפון"</string>
     <string name="security_settings_fingerprint" msgid="6387775386189204201">"טביעת אצבע"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"טביעת אצבע"</string>
-    <string name="security_settings_fingerprint_settings_preferences_category" msgid="8975029409126780752">"כשמשתמשים בתכונה \'ביטול הנעילה בטביעת אצבע\'"</string>
+    <string name="security_settings_fingerprint_settings_preferences_category" msgid="8975029409126780752">"כשמשתמשים בתכונה \'פתיחה בטביעת אצבע\'"</string>
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"טביעת אצבע לעבודה"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"הוספת טביעת אצבע"</string>
     <string name="security_settings_fingerprint_preference_summary" msgid="8486134175759676037">"{count,plural, =1{נוספה טביעת אצבע}one{נוספו # טביעות אצבע}two{נוספו # טביעות אצבע}other{נוספו # טביעות אצבע}}"</string>
@@ -334,7 +334,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_title" msgid="7931650601996313070">"הגדרת טביעת האצבע"</string>
     <string name="security_settings_fingerprint_enroll_consent_introduction_title" msgid="2278592030102282364">"הרשאה לבטל נעילה בטביעת אצבע"</string>
     <string name="security_settings_fingerprint_enroll_introduction_title_unlock_disabled" msgid="1911710308293783998">"שימוש בטביעת האצבע"</string>
-    <string name="security_settings_fingerprint_settings_footer_learn_more" msgid="2508322993726483601">"מידע נוסף על ביטול הנעילה בטביעת אצבע"</string>
+    <string name="security_settings_fingerprint_settings_footer_learn_more" msgid="2508322993726483601">"מידע נוסף על פתיחה בטביעת אצבע"</string>
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_1" msgid="6808124116419325722">"השליטה בידיים שלך"</string>
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_consent_1" msgid="1122676690472680734">"השליטה נמצאת בידיים שלך ושל הילד או הילדה"</string>
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"חשוב לזכור"</string>
@@ -404,7 +404,7 @@
     <string name="security_settings_sfps_enroll_find_sensor_title" msgid="8327884364635804363">"צריך לגעת בלחצן ההפעלה בלי ללחוץ עליו"</string>
     <string name="security_settings_udfps_enroll_find_sensor_title" msgid="8077484429913330179">"איך מגדירים טביעת אצבע?"</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message" msgid="6160543980992596286">"החיישן נמצא בגב הטלפון. יש להשתמש באצבע המורה."</string>
-    <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"חיישן טביעות האצבע מופיע במסך. נצלם את טביעת האצבע שלך במסך הבא."</string>
+    <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"סימנו במסך איפה ממוקם חיישן טביעות האצבע. נצלם את טביעת האצבע שלך במסך הבא."</string>
     <string name="security_settings_udfps_enroll_find_sensor_start_button" msgid="3172268783620336357">"התחלה"</string>
     <string name="security_settings_udfps_enroll_a11y" msgid="1899453114050362235">"מזיזים את האצבע לאורך המסך כדי לאתר את החיישן. לוחצים לחיצה ארוכה על חיישן טביעות האצבע."</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_content_description" msgid="3065850549419750523">"איור המציג את המיקום של חיישן טביעת האצבע במכשיר"</string>
@@ -779,7 +779,7 @@
     <string name="wifi_dpp_center_qr_code" msgid="5270782275746178104">"‏יש להציב את קוד ה-QR במרכז החלון שלמטה כדי להוסיף את המכשיר אל “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
     <string name="wifi_dpp_scan_qr_code" msgid="3543923817779444434">"‏סריקת קוד QR"</string>
     <string name="wifi_dpp_scan_qr_code_join_network" msgid="969985020363459133">"‏יש להציב את קוד ה-QR במרכז החלון שלמטה כדי להתחבר אל “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
-    <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"‏כדי להצטרף לרשת Wi-Fi, עליך לסרוק את קוד ה-QR שלה במסך הזה"</string>
+    <string name="wifi_dpp_scan_qr_code_join_unknown_network" msgid="3180020429793614145">"‏כדי להצטרף לרשת Wi-Fi, צריך לסרוק את קוד ה-QR שלה במסך הזה"</string>
     <string name="wifi_dpp_share_wifi" msgid="2431744447544057866">"‏שיתוף Wi‑Fi"</string>
     <string name="wifi_dpp_scan_qr_code_with_another_device" msgid="6967364080214325016">"‏יש לסרוק את קוד ה-QR הזה בעזרת מכשיר אחר כדי להצטרף אל “<xliff:g id="SSID">%1$s</xliff:g>”"</string>
     <string name="wifi_dpp_scan_open_network_qr_code_with_another_device" msgid="5398619697898444311">"‏כדי להתחבר אל \"<xliff:g id="SSID">%1$s</xliff:g>\" צריך לסרוק את קוד ה-QR הזה"</string>
@@ -1239,7 +1239,7 @@
     <string name="apn_auth_type" msgid="4234397513494356932">"סוג אימות"</string>
     <string name="apn_type" msgid="1835573305077788773">"‏סוג APN"</string>
     <string name="apn_protocol" msgid="181529867160380010">"‏פרוטוקול APN"</string>
-    <string name="apn_roaming_protocol" msgid="1645131094105362513">"‏פרוטוקול נדידה APN"</string>
+    <string name="apn_roaming_protocol" msgid="1645131094105362513">"‏פרוטוקול ה-APN בנדידה"</string>
     <string name="carrier_enabled" msgid="664074151573150130">"‏הפעלה/השבתה של APN"</string>
     <string name="carrier_enabled_summaryOn" msgid="5212067975273903381">"‏APN מופעל"</string>
     <string name="carrier_enabled_summaryOff" msgid="8541959867953738521">"‏APN מושבת"</string>
@@ -1404,7 +1404,7 @@
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"הגדרת קוד אימות"</string>
     <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"הגדרת קוד אימות לפרופיל העבודה"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"הגדרת קו ביטול נעילה"</string>
-    <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"להוספה של שכבת אבטחה, ניתן להגדיר קו ביטול נעילה לביטול הנעילה של המכשיר"</string>
+    <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"כדי להוסיף עוד שכבת אבטחה כשניגשים אל המכשיר, ניתן להגדיר קו ביטול נעילה"</string>
     <string name="lockpassword_choose_your_profile_pattern_header" msgid="3101811498330756641">"הגדרת קו ביטול נעילה לפרופיל עבודה"</string>
     <string name="lockpassword_choose_your_password_header_for_fingerprint" msgid="3167261267229254090">"כדי להשתמש בטביעת אצבע, עליך להגדיר סיסמה"</string>
     <string name="lockpassword_choose_your_pattern_header_for_fingerprint" msgid="4707788269512303400">"לשימוש בטביעת אצבע, נדרש קו ביטול נעילה"</string>
@@ -1450,11 +1450,11 @@
     <string name="lockpassword_confirm_your_pin_header_frp" msgid="8285647793164729982">"אימות של קוד הגישה"</string>
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"אימות סיסמה"</string>
     <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"אימות הזהות שלך"</string>
-    <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"‏יש להזין את קו ביטול הנעילה של המכשיר כדי להעביר את חשבונות Google, ההגדרות ועוד. קו ביטול הנעילה שלך מוצפן."</string>
-    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"‏יש להזין את קוד האימות של המכשיר כדי להעביר את חשבונות Google, ההגדרות ועוד. קוד האימות שלך מוצפן."</string>
-    <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"‏יש להזין את הסיסמה של המכשיר כדי להעביר את חשבונות Google, ההגדרות ועוד. הסיסמה שלך מוצפנת."</string>
+    <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"‏צריך להזין את קו ביטול הנעילה של המכשיר כדי להעביר את חשבונות Google, ההגדרות ועוד. קו ביטול הנעילה שלך מוצפן."</string>
+    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"‏צריך להזין את קוד האימות של המכשיר כדי להעביר את חשבונות Google, ההגדרות ועוד. קוד האימות שלך מוצפן."</string>
+    <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"‏צריך להזין את הסיסמה של המכשיר כדי להעביר את חשבונות Google, ההגדרות ועוד. הסיסמה שלך מוצפנת."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"שימוש בקו ביטול הנעילה גם במכשיר הזה"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"שימוש בקוד אימות גם לביטול הנעילה במכשיר הזה"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"שימוש גם בקוד אימות לביטול הנעילה במכשיר הזה"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"שימוש בסיסמה גם לביטול הנעילה במכשיר הזה"</string>
     <string name="lockpassword_invalid_pin" msgid="7530854476819820600">"קוד גישה שגוי"</string>
     <string name="lockpassword_invalid_password" msgid="1588184930542221687">"סיסמה שגויה"</string>
@@ -1699,7 +1699,7 @@
     <string name="trackpad_go_back_summary" msgid="4201901101085902768">"מחליקים ימינה או שמאלה עם שלוש אצבעות"</string>
     <string name="trackpad_go_home_title" msgid="2146525662148291552">"מעבר לדף הבית"</string>
     <string name="trackpad_go_home_summary" msgid="2222744701528360887">"מחליקים למעלה עם שלוש אצבעות"</string>
-    <string name="trackpad_recent_apps_title" msgid="8195970908411585445">"האפליקציות האחרונות"</string>
+    <string name="trackpad_recent_apps_title" msgid="8195970908411585445">"אפליקציות שהיו בשימוש לאחרונה"</string>
     <string name="trackpad_recent_apps_summary" msgid="2685092851677573794">"מחליקים למעלה עם שלוש אצבעות ומחזיקים"</string>
     <string name="trackpad_notifications_title" msgid="3521663305043747880">"התראות"</string>
     <string name="trackpad_notifications_summary" msgid="7663647367648690040">"מחליקים למטה עם שלוש אצבעות"</string>
@@ -1767,7 +1767,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"הגדרות נגישות"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"תצוגה, אינטראקציה, אודיו"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"הגדרות תצוגה"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"ניתן להתאים אישית את המכשיר הזה כך שיתאים לצרכים שלך. אפשר לשנות את תכונות הנגישות מאוחר יותר ב\'הגדרות\'."</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"ניתן להתאים את המכשיר הזה לצרכים שלך. אפשר לשנות את תכונות הנגישות מאוחר יותר ב\'הגדרות\'."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"שינוי גודל הגופן"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"קורא מסך"</string>
     <string name="captions_category_title" msgid="574490148949400274">"כתוביות"</string>
@@ -1790,7 +1790,7 @@
     <string name="bt_hci_snoop_log_filter_summary" msgid="7217091930762522599">"‏הגדרת מצב הסינון. (צריך להשבית ולהפעיל את ה-Bluetooth כדי שהשינויים ייכנסו לתוקף)"</string>
     <string name="bt_hci_snoop_log_filtered_mode_disabled_summary" msgid="8824952559433361848">"‏צריך להגדיר את מצב יומן snoop של Bluetooth HCI ל\'מופעל\' ו\'מסונן\' כדי לשנות את האפשרות הזו"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
-    <string name="talkback_summary" msgid="5820927220378864281">"קורא מסך שמיועד בעיקר לעיוורים או לבעלי ראייה לקויה"</string>
+    <string name="talkback_summary" msgid="5820927220378864281">"קורא מסך שמיועד בעיקר לאנשים עם עיוורון או עם לקות ראייה"</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"ניתן להקיש על פריטים במסך כדי לשמוע הקראה שלהם"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"כתוביות"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"מידע על ההעדפות לגבי כתוביות"</string>
@@ -1835,7 +1835,7 @@
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"בוקר טוב!\n\nרציתי לבדוק איך מתקדמות התוכניות. הן יהיו מוכנות לפני שנתחיל לעצב את הבלונים החדשים?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"איפוס ההגדרות"</string>
     <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"הגדרות גודל התצוגה והטקסט אופסו"</string>
-    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"לאפס את הטקסט וגודל התצוגה?"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"לאפס את גודל התצוגה והטקסט?"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"איפוס"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"יש לך תוכניות לסוף השבוע?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"נראה לי שאלך לחוף הים. רוצה להצטרף?"</string>
@@ -1843,7 +1843,7 @@
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"שינוי מרחק התצוגה (זום)"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"מקישים שלוש פעמים כדי לשנות את המרחק מהתצוגה"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"הקשה על לחצן כדי לשנות את מרחק התצוגה"</string>
-    <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"כדי לראות טוב יותר את התוכן, אפשר להגדיל במהירות את התצוגה"</string>
+    <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"כדי לראות טוב יותר את התוכן, אפשר להגדיל את התצוגה"</string>
     <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"‏&lt;b&gt;כדי להגדיל את התצוגה:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. משתמשים בקיצור הדרך כדי להתחיל בהגדלה&lt;br/&gt; {1,number,integer}. מקישים על המסך&lt;br/&gt; {2,number,integer}. גוררים 2 אצבעות על המסך כדי לזוז בו&lt;br/&gt; {3,number,integer}. עושים תנועת צביטה באמצעות 2 אצבעות כדי לשנות את מרחק התצוגה&lt;br/&gt; {4,number,integer}. משתמשים בקיצור הדרך כדי להפסיק את ההגדלה&lt;br/&gt;&lt;br/&gt; &lt;b&gt;כדי להגדיל את התצוגה באופן זמני:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. מוודאים שסוג ההגדלה הוא \'מסך מלא\'&lt;br/&gt; {1,number,integer}. משתמשים בקיצור הדרך כדי להתחיל בהגדלה&lt;br/&gt; {2,number,integer}. לוחצים לחיצה ארוכה במקום כלשהו במסך&lt;br/&gt; {3,number,integer}. גוררים את האצבע על המסך כדי לזוז בו&lt;br/&gt; {4,number,integer}. כדי להפסיק את ההגדלה, מרימים את האצבע"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"כשההגדלה מופעלת, ניתן להתקרב למסך.\n\n"<b>"כדי להתקרב,"</b>", מתחילים בהגדלה ולאחר מכן מקישים במקום כלשהו במסך.\n"<ul><li>"גוררים שתי אצבעות או יותר כדי לגלול"</li>\n<li>"עושים תנועת צביטה עם שתי אצבעות או יותר כדי לשנות את מרחק התצוגה"</li></ul>\n\n<b>"כדי להתקרב באופן זמני"</b>", מתחילים בהגדלה ולאחר מכן, לוחצים לחיצה ארוכה במקום כלשהו במסך.\n"<ul><li>"גוררים כדי לנוע במסך"</li>\n<li>"מרימים את האצבע כדי להתרחק"</li></ul>\n\n"לא ניתן להתקרב באמצעות המקלדת או סרגל הניווט."</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"דף <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> מתוך <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
@@ -3461,7 +3461,7 @@
     <string name="device_feedback" msgid="5351614458411688608">"שליחת משוב על המכשיר הזה"</string>
     <string name="restr_pin_enter_admin_pin" msgid="4435410646541671918">"יש להזין את קוד הגישה של מנהל המכשיר"</string>
     <string name="switch_on_text" msgid="5664542327776075105">"פועל"</string>
-    <string name="switch_off_text" msgid="1315547447393646667">"מצב כבוי"</string>
+    <string name="switch_off_text" msgid="1315547447393646667">"מושבת"</string>
     <string name="nfc_setting_on" msgid="7701896496026725772">"התכונה פועלת"</string>
     <string name="nfc_setting_off" msgid="7142103438532732309">"התכונה כבויה"</string>
     <string name="screen_pinning_switch_on_text" msgid="6971386830247542552">"פועלת"</string>
@@ -4571,8 +4571,8 @@
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"הצגת הודעה בזמן גישה של אפליקציות לטקסט, לתמונות או לכל תוכן אחר שהעתקת"</string>
     <string name="all_apps" msgid="3054120149509114789">"כל האפליקציות"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"אין אישור"</string>
-    <string name="uwb_settings_title" msgid="8578498712312002231">"‏תחום רחב סרט (UWB)"</string>
-    <string name="uwb_settings_summary" msgid="3074271396764672268">"‏עזרה בזיהוי המיקום היחסי של מכשירים עם תחום רחב סרט (UWB) בקרבת מקום"</string>
+    <string name="uwb_settings_title" msgid="8578498712312002231">"‏Ultra Wideband ‏(UWB)"</string>
+    <string name="uwb_settings_summary" msgid="3074271396764672268">"‏עזרה בזיהוי המיקום היחסי של מכשירים עם UWB בקרבת מקום"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"‏כיבוי מצב טיסה לשימוש בתחום רחב סרט (UWB)"</string>
     <string name="uwb_settings_summary_no_uwb_regulatory" msgid="3465456428217979428">"‏UWB לא זמין במיקום הנוכחי"</string>
     <string name="camera_toggle_title" msgid="8952668677727244992">"גישה למצלמה"</string>
