--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1454,7 +1454,7 @@
     <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google アカウント、設定などを移行するには、他のデバイスの PIN を入力してください。PIN は暗号化されます。"</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Google アカウント、設定などを移行するには、他のデバイスのパスワードを入力してください。パスワードは暗号化されます。"</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"パターンでこのデバイスのロックも解除されます"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"PIN でこのデバイスのロックも解除されます"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"この PIN でこのデバイスもロック解除する"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"パスワードでこのデバイスのロックも解除されます"</string>
     <string name="lockpassword_invalid_pin" msgid="7530854476819820600">"PINが正しくありません"</string>
     <string name="lockpassword_invalid_password" msgid="1588184930542221687">"パスワードが正しくありません"</string>
