--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -113,7 +113,7 @@
     <string name="connected_device_call_device_title" msgid="88732390601723608">"ಸಾಧನಗಳಿಗೆ ಕರೆಮಾಡಿ"</string>
     <string name="connected_device_other_device_title" msgid="4652120430615729193">"ಇತರ ಸಾಧನಗಳು"</string>
     <string name="connected_device_saved_title" msgid="5607274378851905959">"ಸೇವ್ ಮಾಡಲಾಗಿರುವ ಸಾಧನಗಳು"</string>
-    <string name="connected_device_add_device_summary" msgid="8671009879957120802">"ಜೋಡಿಸಲು ಬ್ಲೂಟೂತ್ ಆನ್ ಆಗುತ್ತದೆ"</string>
+    <string name="connected_device_add_device_summary" msgid="8671009879957120802">"ಪೇರ್ ಮಾಡಲು ಬ್ಲೂಟೂತ್ ಆನ್ ಆಗುತ್ತದೆ"</string>
     <string name="connected_device_connections_title" msgid="4164120115341579170">"ಕನೆಕ್ಷನ್ ಆದ್ಯತೆಗಳು"</string>
     <string name="connected_device_previously_connected_screen_title" msgid="8823331744788100605">"ಹಿಂದೆ ಸಂಪರ್ಕಗೊಂಡಿರುವುದು"</string>
     <string name="connected_device_bluetooth_turned_on_toast" msgid="144664089794199928">"ಬ್ಲೂಟೂತ್ ಆನ್ ಮಾಡಲಾಗಿದೆ"</string>
@@ -767,7 +767,7 @@
     <string name="wifi_eap_identity" msgid="3629406902174137028">"ಗುರುತಿಸುವಿಕೆ"</string>
     <string name="wifi_eap_anonymous" msgid="8630332141751267000">"ಅನಾಮಧೇಯ ಗುರುತಿಸುವಿಕೆ"</string>
     <string name="wifi_password" msgid="1458802324849513755">"ಪಾಸ್‌ವರ್ಡ್"</string>
-    <string name="wifi_show_password" msgid="6865993988238157923">"ಪಾಸ್‌ವರ್ಡ್‌ ತೋರಿಸು"</string>
+    <string name="wifi_show_password" msgid="6865993988238157923">"ಪಾಸ್‌ವರ್ಡ್‌ ತೋರಿಸಿ"</string>
     <string name="wifi_ap_choose_2G" msgid="1436802195991542016">"2.4 GHz ಬ್ಯಾಂಡ್"</string>
     <string name="wifi_ap_prefer_5G" msgid="2520628479818369902">"5.0 GHz ಬ್ಯಾಂಡ್‌ಗೆ ಆದ್ಯತೆ ನೀಡಿ"</string>
     <string name="wifi_ip_settings" msgid="6420498748726599133">"IP ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
@@ -1837,7 +1837,7 @@
     <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"ಡಿಸ್‌ಪ್ಲೇ ಗಾತ್ರ ಮತ್ತು ಪಠ್ಯದ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ರೀಸೆಟ್ ಮಾಡಲಾಗಿದೆ"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ಡಿಸ್‌ಪ್ಲೇ ಗಾತ್ರ ಮತ್ತು ಪಠ್ಯವನ್ನು ರೀಸೆಟ್ ಮಾಡಬೇಕೆ?"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"ರೀಸೆಟ್ ಮಾಡಿ"</string>
-    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"ವಾರಾಂತ್ಯಕ್ಕೆ ಯಾವುದಾದರೂ ಯೋಜನೆ ಇದೆಯೇ?"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"ವಾರಾಂತ್ಯಕ್ಕೆ ಯಾವುದಾದರೂ ಪ್ಲಾನ್ ಇದೆಯೇ?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"ಬೀಚ್‌ಗೆ ಹೋಗಬೇಕೆಂದಿದ್ದೇನೆ. ನೀವು ಬರುವಿರಾ?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"ಆಯ್ಕೆಗಳು"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"ಪರದೆಯನ್ನು ಝೂಮ್ ಇನ್ ಮಾಡಿ"</string>
@@ -2862,7 +2862,7 @@
     <string name="cloned_app_created_summary" msgid="7277912971544890710">"ಕ್ಲೋನ್ ಮಾಡಲಾಗಿದೆ"</string>
     <string name="cloned_app_creation_toast_summary" msgid="3854494347144867870">"<xliff:g id="PACKAGE_LABEL">%1$s</xliff:g> ಕ್ಲೋನ್ ರಚಿಸಲಾಗುತ್ತಿದೆ"</string>
     <string name="cloned_app_created_toast_summary" msgid="755225403495544163">"<xliff:g id="PACKAGE_LABEL">%1$s</xliff:g> ಕ್ಲೋನ್ ರಚಿಸಲಾಗಿದೆ"</string>
-    <string name="system_dashboard_summary" msgid="7400745270362833832">"ಭಾಷೆಗಳು, ಗೆಸ್ಚರ್‌ಗಳು, ಸಮಯ, ಬ್ಯಾಕಪ್"</string>
+    <string name="system_dashboard_summary" msgid="7400745270362833832">"ಭಾಷೆಗಳು, ಜೆಸ್ಚರ್‌ಗಳು, ಸಮಯ, ಬ್ಯಾಕಪ್"</string>
     <string name="languages_setting_summary" msgid="7963053736715746726">"ಸಿಸ್ಟಂ ಭಾಷೆಗಳು, ಆ್ಯಪ್ ಭಾಷೆಗಳು, ಧ್ವನಿ"</string>
     <string name="keywords_wifi" msgid="8156528242318351490">"ವೈಫೈ, ವೈ-ಫೈ ನೆಟ್‌ವರ್ಕ್ ಸಂಪರ್ಕ, ಇಂಟರ್ನೆಟ್, ವೈರ್‌ಲೆಸ್, ಡೇಟಾ, ವೈ ಫೈ"</string>
     <string name="keywords_wifi_notify_open_networks" msgid="6580896556389306636">"ವೈ-ಫೈ ನೋಟಿಫಿಕೇಶನ್‍, ವೈಫೈ ನೋಟಿಫಿಕೇಶನ್‍"</string>
@@ -4473,7 +4473,7 @@
     <string name="keywords_media_controls" msgid="8345490568291778638">"ಮಾಧ್ಯಮ"</string>
     <string name="connected_device_see_all_summary" msgid="2056010318537268108">"ಬ್ಲೂಟೂತ್ ಆನ್ ಆಗುತ್ತದೆ"</string>
     <string name="provider_internet_settings" msgid="3831259474776313323">"ಇಂಟರ್ನೆಟ್"</string>
-    <string name="provider_network_settings_title" msgid="2624756136016346774">"ಸಿಮ್‌ಗಳು"</string>
+    <string name="provider_network_settings_title" msgid="2624756136016346774">"SIMಗಳು"</string>
     <string name="calls_and_sms" msgid="1931855083959003306">"ಕರೆಗಳು &amp; SMS"</string>
     <string name="calls_and_sms_category" msgid="3788238090898237767">"ವೈ-ಫೈ ಕರೆ ಮಾಡುವಿಕೆ"</string>
     <string name="calls_sms_wfc_summary" msgid="3940529919408667336">"ವೈ-ಫೈ ಮೇಲೆ ಕರೆಗಳನ್ನು ಮಾಡಿ ಮತ್ತು ಸ್ವೀಕರಿಸಿ"</string>
