--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -1451,7 +1451,7 @@
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"പാസ്‌വേഡ് പരിശോധിക്കുക"</string>
     <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"നിങ്ങളാണെന്ന് പരിശോധിച്ചുറപ്പിക്കൂ"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Google അക്കൗണ്ടുകളും ക്രമീകരണങ്ങളും മറ്റും കൈമാറാൻ, നിങ്ങളുടെ മറ്റ് ഉപകരണത്തിന്റെ പാറ്റേൺ നൽകുക. നിങ്ങളുടെ പാറ്റേൺ എൻക്രിപ്റ്റ് ചെയ്തിരിക്കുന്നു."</string>
-    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google അക്കൗണ്ടുകളും ക്രമീകരണങ്ങളും മറ്റും കൈമാറാൻ, നിങ്ങളുടെ മറ്റ് ഉപകരണത്തിന്റെ പിൻ നൽകുക. നിങ്ങളുടെ പിൻ എൻക്രിപ്റ്റ് ചെയ്തിരിക്കുന്നു."</string>
+    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google Account-കളും ക്രമീകരണങ്ങളും മറ്റും കൈമാറാൻ, നിങ്ങളുടെ മറ്റ് ഉപകരണത്തിന്റെ പിൻ നൽകുക. നിങ്ങളുടെ പിൻ എൻക്രിപ്റ്റ് ചെയ്തിരിക്കുന്നു."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Google അക്കൗണ്ടുകളും ക്രമീകരണവും മറ്റും കൈമാറാൻ, നിങ്ങളുടെ മറ്റ് ഉപകരണത്തിന്റെ പാസ്‌വേഡ് നൽകുക. നിങ്ങളുടെ പാസ്‌വേഡ് എൻക്രിപ്റ്റ് ചെയ്തിരിക്കുന്നു."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"ഈ ഉപകരണം അൺലോക്ക് ചെയ്യാനും പാറ്റേൺ നൽകൂ"</string>
     <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"ഈ ഉപകരണം അൺലോക്ക് ചെയ്യാനും പിൻ നൽകൂ"</string>
@@ -1832,7 +1832,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"ടെക്‌സ്‌റ്റ് പ്രദർശിപ്പിക്കുന്ന രീതി മാറ്റുക"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"വിഷയം: ഹോട്ട് എയർ ബലൂൺ ഡിസൈനുകൾ"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"അയച്ചത്: രാമൻ"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"ഗുഡ് മോണിംഗ്!\n\nഡിസൈനുകളുടെ രൂപകൽപ്പന എന്തായി എന്ന് പരിശോധിക്കാൻ ഞാൻ ആഗ്രഹിക്കുന്നു. ഞങ്ങൾ പുതിയ ബലൂണുകൾ നിർമ്മിക്കാൻ തുടങ്ങുന്നതിന് മുമ്പ് അവ തയ്യാറാകുമോ?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"ഗുഡ് മോണിംഗ്!\n\nഡിസൈനുകൾ പൂർത്തിയായോ എന്ന് പരിശോധിക്കാൻ ഞാൻ ആഗ്രഹിക്കുന്നു. ഞങ്ങൾ പുതിയ ബലൂണുകൾ നിർമ്മിക്കാൻ തുടങ്ങുന്നതിന് മുമ്പ് അവ തയ്യാറാകുമോ?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"ക്രമീകരണം റീസെറ്റ് ചെയ്യൂ"</string>
     <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"ഡിസ്‌പ്ലേ വലുപ്പവും ടെക്‌സ്‌റ്റ് ക്രമീകരണവും റീസെറ്റ് ചെയ്‌തു"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ഡിസ്പ്ലേ വലുപ്പവും ടെക്സ്റ്റും റീസെറ്റ് ചെയ്യണോ?"</string>
