--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -1451,7 +1451,7 @@
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"पासवर्ड पुष्टि गर्नुहोस्"</string>
     <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"आफ्नो पहिचान पुष्टि गर्नुहोस्"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Google खाता र सेटिङलगायतका अन्य कुराहरू ट्रान्स्फर गर्न आफ्नो अर्को डिभाइसको प्याटर्न हाल्नुहोस्। प्याटर्न इन्क्रिप्ट गरिएको छ।"</string>
-    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google खाता र सेटिङलगायतका अन्य कुराहरू ट्रान्स्फर गर्न आफ्नो अर्को डिभाइसको PIN हाल्नुहोस्। PIN इन्क्रिप्ट गरिएको छ।"</string>
+    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google खाता र सेटिङलगायतका अन्य कुराहरू ट्रान्स्फर गर्न आफ्नो अर्को डिभाइसको PIN हाल्नुहोस्। तपाईंको PIN इन्क्रिप्ट गरिएको छ।"</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Google खाता र सेटिङलगायतका अन्य कुराहरू ट्रान्स्फर गर्न आफ्नो अर्को डिभाइसको पासवर्ड हाल्नुहोस्। पासवर्ड इन्क्रिप्ट गरिएको छ।"</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"यो डिभाइस अनलक गर्न प्याटर्न पनि प्रयोग गर्नुहोस्"</string>
     <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"यो डिभाइस अनलक गर्न PIN पनि प्रयोग गर्नुहोस्"</string>
@@ -1790,7 +1790,7 @@
     <string name="bt_hci_snoop_log_filter_summary" msgid="7217091930762522599">"फिल्टर गर्ने मोड सेट गर्नुहोस्। (परिवर्तनहरू लागू गर्न ब्लुटुथ अफ गरी फेरि अन गर्नुहोस्)"</string>
     <string name="bt_hci_snoop_log_filtered_mode_disabled_summary" msgid="8824952559433361848">"यो विकल्प बद‌ल्न ब्लुटुथ HCI स्नुप लग मोड सेट गरी \"अन गरिएको\" र \"फिल्टर गरिएको\" बनाउनुहोस्"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
-    <string name="talkback_summary" msgid="5820927220378864281">"मुख्तया दृष्टिविहीन र आँखा कम देख्ने व्यक्तिहरूको लागि स्क्रिन रिडर"</string>
+    <string name="talkback_summary" msgid="5820927220378864281">"मुख्यतया दृष्टिविहीन र आँखा कम देख्ने व्यक्तिहरूको लागि स्क्रिन रिडर"</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"ठुलो आवाजमा सुन्न आफ्नो स्क्रिनमा भएका वस्तुहरूमा ट्याप गर्नुहोस्"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"क्याप्सनसम्बन्धी प्राथमिकताहरू"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"क्याप्सनसम्बन्धी प्राथमिकताहरूका बारेमा"</string>
@@ -1832,7 +1832,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"पाठ देखिने शैली बदल्नुहोस्"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"विषय: हट एयर बेलुनका डिजाइनहरू"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"प्रेषक: Bill"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"नमस्ते!\n\n म यी डिजाइनहरू कसरी तयार हुँदै छन् भन्ने हेर्न मात्र चाहन्थेँ। हामीले नयाँ बेलुन बनाउन थाल्नुअघि नै ती डिजाइनहरू तयार भइसक्छन्?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"नमस्ते!\n\n म यी डिजाइनहरू कसरी तयार हुँदै छन् भन्ने हेर्न चाहन्छु। हामीले नयाँ बेलुन बनाउन थाल्नुअघि नै ती डिजाइनहरू तयार भइसक्छन्?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"सेटिङ रिसेट गर्नुहोस्"</string>
     <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"डिस्प्लेको आकार तथा टेक्स्ट सेटिङ रिसेट गरिएका छन्"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"डिस्प्लेको आकार र टेक्स्टसम्बन्धी सेटिङ रिसेट गर्ने हो?"</string>
@@ -1906,7 +1906,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"पारदर्शी"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"अपारदर्शी"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"हाइ कन्ट्रास्ट टेक्स्ट"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"पाठको रङ बदलेर कालो वा सेतो बनाउनुहोस्। यसले ब्याकग्राउन्डमा कन्ट्रास्टको लेभल अधिकतम बनाउँछ।"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"टेक्स्टको रङ बदलेर कालो वा सेतो बनाउनुहोस्। यसले ब्याकग्राउन्डमा कन्ट्रास्टको लेभल अधिकतम बनाउँछ।"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"स्क्रिन आवर्धन स्वतः अपडेट गर्नुहोस्"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"एप ट्रान्जिसनहरूमा स्क्रिन आवर्धन अपडेट गर्नुहोस्"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"पावर बटन थोच्दा फोन काटियोस्"</string>
