--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -588,7 +588,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะแนะนำ PIN หรือรหัสผ่านที่รัดกุม และแอปอาจไม่ทำงานตามที่คาดไว้หากไม่เลือกอย่างน้อย 1 รูปแบบ"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะแนะนำ PIN หรือรหัสผ่านใหม่ และแอปอาจไม่ทำงานตามที่คาดไว้หากไม่เลือกอย่างน้อย 1 รูปแบบ"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะแนะนำรูปแบบ, PIN หรือรหัสผ่านใหม่ และแอปอาจไม่ทำงานตามที่คาดไว้หากไม่เลือกอย่างน้อย 1 รูปแบบ"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะแนะนำการล็อกหน้าจอใหม่"</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> ได้ขอให้เปลี่ยนการล็อกหน้าจอใหม่"</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"ลองอีกครั้ง ครั้งที่ <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g> จาก <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g>"</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"ระบบจะลบข้อมูลของคุณ"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"หากคุณป้อนรูปแบบไม่ถูกต้องในความพยายามครั้งถัดไป ระบบจะลบข้อมูลในอุปกรณ์เครื่องนี้"</string>
@@ -1906,7 +1906,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"โปร่งใส"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"ไม่โปร่งใส"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"ข้อความคอนทราสต์สูง"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"เปลี่ยนสีข้อความเป็นสีดำหรือสีขาว เพิ่มความ​คอนทราสต์เมื่อเทียบกับพื้นหลังให้สูงสุด"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"เปลี่ยนสีข้อความเป็นสีดำหรือสีขาว เพิ่มความ​​คอนทราสต์เมื่อเทียบกับพื้นหลังให้สูงสุด"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"อัปเดตการขยายหน้าจอโดยอัตโนมัติ"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"อัปเดตการขยายหน้าจอเมื่อเปลี่ยนแอปพลิเคชัน"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"กดปุ่มเปิด/ปิดเพื่อวางสาย"</string>
