--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -524,7 +524,7 @@
     <string name="unlock_set_unlock_pin_title" msgid="5283636759362880407">"PIN-код"</string>
     <string name="unlock_set_unlock_password_title" msgid="2559842616268607041">"Пароль"</string>
     <string name="unlock_set_do_later_title" msgid="6565575303676064364">"Не зараз"</string>
-    <string name="current_screen_lock" msgid="1367883977261098017">"Поточне блокування екрана"</string>
+    <string name="current_screen_lock" msgid="1367883977261098017">"Поточний спосіб розблокування"</string>
     <string name="fingerprint_unlock_set_unlock_pattern" msgid="2229689425933043901">"Ключ • Відбиток пальця"</string>
     <string name="fingerprint_unlock_set_unlock_pin" msgid="7979848492740627674">"PIN-код • Відбиток пальця"</string>
     <string name="fingerprint_unlock_set_unlock_password" msgid="6207676267295036963">"Пароль • Відбиток пальця"</string>
@@ -588,7 +588,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"Щоб додаток <xliff:g id="APP_NAME">%1$s</xliff:g> правильно працював, він радить створити надійний PIN-код або пароль"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"Щоб додаток <xliff:g id="APP_NAME">%1$s</xliff:g> правильно працював, він радить створити новий PIN-код або пароль"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"Щоб додаток <xliff:g id="APP_NAME">%1$s</xliff:g> правильно працював, він радить створити новий ключ, PIN-код або пароль"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> радить вибрати новий спосіб блокування екрана"</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> рекомендує вибрати інший спосіб розблокування екрана"</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"Спробуйте ще. Спроба <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g> із <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g>."</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"Ваші дані буде видалено"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"Якщо наступного разу ви введете неправильний ключ, дані на цьому пристрої буде видалено"</string>
