--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -524,7 +524,7 @@
     <string name="unlock_set_unlock_pin_title" msgid="5283636759362880407">"PIN 码"</string>
     <string name="unlock_set_unlock_password_title" msgid="2559842616268607041">"密码"</string>
     <string name="unlock_set_do_later_title" msgid="6565575303676064364">"以后再说"</string>
-    <string name="current_screen_lock" msgid="1367883977261098017">"当前屏幕锁定设置"</string>
+    <string name="current_screen_lock" msgid="1367883977261098017">"当前的屏幕锁定方式"</string>
     <string name="fingerprint_unlock_set_unlock_pattern" msgid="2229689425933043901">"解锁图案 • 指纹"</string>
     <string name="fingerprint_unlock_set_unlock_pin" msgid="7979848492740627674">"PIN 码 • 指纹"</string>
     <string name="fingerprint_unlock_set_unlock_password" msgid="6207676267295036963">"密码 • 指纹"</string>
@@ -2319,7 +2319,7 @@
     <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"每小时电池用量图表"</string>
     <string name="battery_usage_breakdown_title_since_last_full_charge" msgid="435006273323199906">"自上次充满电后的电池使用情况"</string>
     <string name="battery_usage_breakdown_title_for_slot" msgid="4823179483667671406">"“<xliff:g id="SLOT">%s</xliff:g>”的电池用量"</string>
-    <string name="screen_time_category_last_full_charge" msgid="8856908320256057753">"自上次充满电后的设备使用时间"</string>
+    <string name="screen_time_category_last_full_charge" msgid="8856908320256057753">"自上次充满电后的屏幕使用时间"</string>
     <string name="screen_time_category_for_slot" msgid="8287722270554654959">"“<xliff:g id="SLOT">%s</xliff:g>”的设备使用时间"</string>
     <string name="battery_usage_spinner_view_by_apps" msgid="8769276544072098082">"按应用查看"</string>
     <string name="battery_usage_spinner_view_by_systems" msgid="7904104223212160541">"按系统查看"</string>
@@ -4662,7 +4662,7 @@
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"停止限制子进程"</string>
     <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"停止限制应用子进程的系统资源用量"</string>
     <string name="enable_notes_role_title" msgid="7662702013496114763">"强制启用“记事”角色"</string>
-    <string name="enable_notes_role_summary" msgid="136916915155048249">"通过“记事”角色启用记事系统集成。如果“记事”角色已启用，则无需执行任何操作。"</string>
+    <string name="enable_notes_role_summary" msgid="136916915155048249">"启用通过“记事”角色实现的记事系统集成。如果“记事”角色已启用，此设置不会有任何作用。"</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"广播"</string>
     <string name="bluetooth_broadcast_dialog_broadcast_app" msgid="1016617579194329005">"广播“<xliff:g id="CURRENTAPP">%1$s</xliff:g>”的内容"</string>
     <string name="bluetooth_broadcast_dialog_find_message" msgid="6621660851669953883">"收听在您附近播放的广播"</string>
