--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -67,7 +67,7 @@
     <string name="bluetooth_device_controls_title" msgid="1895676556354697234">"कान की मशीन की सेटिंग"</string>
     <string name="bluetooth_device_controls_summary" msgid="8115767735418425663">"शॉर्टकट, कान की मशीन के साथ काम करने की सुविधा"</string>
     <string name="bluetooth_device_controls_specific" msgid="7706863288754077107">"इस डिवाइस के लिए"</string>
-    <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ऑडियो आउटपुट"</string>
+    <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"ऑडियो डिवाइस"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"ऑडियो आउटपुट की जानकारी"</string>
     <string name="bluetooth_audio_routing_summary" msgid="7180947533985969066">"साउंड को कान की मशीन या फ़ोन स्पीकर पर रूट करें"</string>
     <string name="bluetooth_screen_related" msgid="7976543255501825536">"मिलते-जुलते टूल"</string>
@@ -358,7 +358,7 @@
     <string name="biometric_settings_intro_with_face" msgid="7658123658803417930">"चेहरे की पहचान न होने पर, स्मार्टवॉच की मदद से फ़ोन को अनलॉक किया जा सकता है."</string>
     <string name="biometric_settings_use_fingerprint_or_watch_for" msgid="1160830065613858095">"डिवाइस खोलने के लिए, फ़िंगरप्रिंट या स्मार्टवॉच का इस्तेमाल करें"</string>
     <string name="biometric_settings_use_face_or_watch_for" msgid="1507077107150278532">"डिवाइस खोलने के लिए, फ़ेस लॉक या स्मार्टवॉच का इस्तेमाल करें"</string>
-    <string name="biometric_settings_use_face_fingerprint_or_watch_for" msgid="7495835723072020641">"डिवाइस अनलॉक करने के लिए, चेहरे, फ़िंगरप्रिंट या स्मार्टवॉच का इस्तेमाल करें"</string>
+    <string name="biometric_settings_use_face_fingerprint_or_watch_for" msgid="7495835723072020641">"फ़ेस, फ़िंगरप्रिंट या स्मार्टवॉच का इस्तेमाल करके"</string>
     <string name="biometric_settings_use_watch_for" msgid="5454545622244040110">"डिवाइस खोलने के लिए, स्मार्टवॉच का इस्तेमाल करें"</string>
     <string name="biometric_settings_use_face_or_watch_preference_summary" msgid="4969685200340861744">"चेहरे या स्मार्टवॉच का इस्तेमाल करें"</string>
     <string name="biometric_settings_use_fingerprint_or_watch_preference_summary" msgid="2425628094194828407">"फ़िंगरप्रिंट या स्मार्टवॉच का इस्तेमाल करें"</string>
@@ -388,7 +388,7 @@
     <string name="biometric_settings_use_biometric_for_apps" msgid="6201168728906364189">"ऐप इस्तेमाल करने के लिए अपनी पहचान की पुष्टि करें"</string>
     <string name="biometric_settings_use_face_preference_summary" msgid="1821648836899408477">"अपने चेहरे का इस्तेमाल करके"</string>
     <string name="biometric_settings_use_fingerprint_preference_summary" msgid="6077762097826050165">"अपने फ़िंगरप्रिंट का इस्तेमाल करें"</string>
-    <string name="biometric_settings_use_face_or_fingerprint_preference_summary" msgid="3029102492674234728">"अपने फ़िंगरप्रिंट या चेहरे का इस्तेमाल करें"</string>
+    <string name="biometric_settings_use_face_or_fingerprint_preference_summary" msgid="3029102492674234728">"फ़ेस या फ़िंगरप्रिंट अनलॉक इस्तेमाल करें"</string>
     <string name="biometric_settings_hand_back_to_guardian_ok" msgid="1763788801883247426">"ठीक है"</string>
     <string name="biometric_settings_add_face_in_split_mode_title" msgid="6041232223862753222">"फ़ेस अनलॉक को सेट अप नहीं किया जा सकता"</string>
     <string name="biometric_settings_add_face_in_split_mode_message" msgid="1904738532939614456">"फ़ेस अनलॉक को सेट अप करने के लिए स्प्लिट स्क्रीन से बाहर निकलें"</string>
@@ -499,14 +499,14 @@
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"अपना फ़ोन सुरक्षित करें"</string>
     <string name="suggested_fingerprint_lock_settings_title" msgid="3140266181874137984">"डिवाइस अनलॉक करने लिए फ़िंगरप्रिंट जोड़ें"</string>
     <string name="lock_settings_picker_title" msgid="9219376327364915334">"स्‍क्रीन लॉक चुनें"</string>
-    <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"स्क्रीन लॉक चुनें"</string>
-    <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"नया स्क्रीन लाॅक चुनें"</string>
+    <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"स्क्रीन लॉक का कोई विकल्प चुनें"</string>
+    <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"कोई नया स्क्रीन लाॅक चुनें"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"वर्क ऐप्लिकेशन के लिए लॉक चुनें"</string>
     <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"वर्क प्रोफ़ाइल के लिए लॉक चुनें"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"ज़्यादा सुरक्षा के लिए, अनलॉक करने का एक दूसरा विकल्प भी सेट करें."</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"स्क्रीन लॉक का एक और तरीका चुनें"</string>
-    <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"अगर आपको स्क्रीन लॉक याद नहीं है, तो आईटी एडमिन इसे रीसेट नहीं कर सकता."</string>
-    <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"एक अलग वर्क लॉक सेट करें"</string>
+    <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"अगर आपको स्क्रीन लॉक याद नहीं है, तो आईटी एडमिन उसे रीसेट नहीं कर पाएगा."</string>
+    <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"वर्क प्रोफ़ाइल के लिए एक अलग लॉक सेट करें"</string>
     <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"अगर आपको यह लॉक याद नहीं, तो आईटी एडमिन से इसे रीसेट करने के लिए कहें"</string>
     <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"स्क्रीन लॉक के विकल्प"</string>
     <string name="setup_lock_settings_options_dialog_title" msgid="7985107300517468569">"स्क्रीन लॉक के विकल्प"</string>
@@ -588,7 +588,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"<xliff:g id="APP_NAME">%1$s</xliff:g> आपको डिवाइस पर मुश्किल पिन या पासवर्ड सेट करने का सुझाव देता है. इसके बगैर शायद यह आपकी उम्मीद के मुताबिक काम न करे"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"<xliff:g id="APP_NAME">%1$s</xliff:g> आपको डिवाइस पर नया पिन या पासवर्ड सेट करने का सुझाव देता है. इसके बगैर शायद यह आपकी उम्मीद के मुताबिक काम न करे"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"<xliff:g id="APP_NAME">%1$s</xliff:g> आपको डिवाइस पर नया पैटर्न, पिन या पासवर्ड सेट करने का सुझाव देता है. इसके बगैर शायद यह आपकी उम्मीद के मुताबिक काम न करे"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> आपको डिवाइस पर नया स्क्रीन लाॅक सेट करने का सुझाव देता है"</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> ऐप्लिकेशन, डिवाइस के लिए नया स्क्रीन लाॅक सेट करने का सुझाव देता है"</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"फिर से कोशिश करें. आप <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g> में से <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g> बार कोशिश कर चुके हैं."</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"आपका डेटा मिटा दिया जाएगा"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"अगर आप अगली कोशिश में गलत पैटर्न डालते हैं, तो इस डिवाइस का डेटा हटा दिया जाएगा"</string>
@@ -1433,7 +1433,7 @@
     <string name="lockpassword_choose_your_pin_header_for_biometrics" msgid="9086039918921009380">"फ़ेस या फ़िंगरप्रिंट अनलॉक इस्तेमाल करने के लिए पिन सेट करें"</string>
     <string name="lockpassword_forgot_password" msgid="5730587692489737223">"अपना पासवर्ड भूल गए हैं?"</string>
     <string name="lockpassword_forgot_pattern" msgid="1196116549051927516">"अपना पैटर्न भूल गए हैं?"</string>
-    <string name="lockpassword_forgot_pin" msgid="7164232234705747672">"अपना पिन भूल गए हैं?"</string>
+    <string name="lockpassword_forgot_pin" msgid="7164232234705747672">"पिन याद नहीं है?"</string>
     <string name="lockpassword_confirm_your_pattern_generic" msgid="7692794426682501482">"जारी रखने के लिए अपने डिवाइस के पैटर्न का इस्तेमाल करें"</string>
     <string name="lockpassword_confirm_your_pin_generic" msgid="9206928587904701094">"जारी रखने के लिए अपने डिवाइस का पिन डालें"</string>
     <string name="lockpassword_confirm_your_password_generic" msgid="2616127423884477152">"जारी रखने के लिए अपने डिवाइस का पासवर्ड डालें"</string>
@@ -1451,10 +1451,10 @@
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"पासवर्ड की पुष्टि करें"</string>
     <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"पहचान की पुष्टि करें"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Google खाते, सेटिंग, और अन्य डेटा भेजने के लिए, दूसरे डिवाइस का पैटर्न डालें. पैटर्न एन्क्रिप्ट किया गया है."</string>
-    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google खाते, सेटिंग, और अन्य डेटा भेजने के लिए, दूसरे डिवाइस का पिन डालें. पिन एन्क्रिप्ट किया गया है."</string>
+    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google खाते, सेटिंग वगैरह से जुड़ा डेटा ट्रांसफ़र करने के लिए, अपने दूसरे डिवाइस का पिन डालें. आपका पिन एन्क्रिप्ट किया गया है."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Google खाते, सेटिंग, और अन्य डेटा भेजने के लिए, दूसरे डिवाइस का पासवर्ड डालें. पासवर्ड एन्क्रिप्ट किया गया है."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"पैटर्न की मदद से, इस डिवाइस को अनलॉक करें"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"पिन की मदद से, इस डिवाइस को अनलॉक करें"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"पिन से इस डिवाइस को अनलॉक भी करें"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"पासवर्ड की मदद से, इस डिवाइस को अनलॉक करें"</string>
     <string name="lockpassword_invalid_pin" msgid="7530854476819820600">"गलत पिन"</string>
     <string name="lockpassword_invalid_password" msgid="1588184930542221687">"गलत पासवर्ड"</string>
@@ -3863,7 +3863,7 @@
     <string name="long_background_tasks_title" msgid="3272230637974707490">"लंबे बैकग्राउंड टास्क"</string>
     <string name="long_background_tasks_footer_title" msgid="9117342254914743097">"इस ऐप्लिकेशन को, लंबे समय तक चलने वाले बैकग्राउंड टास्क करने की अनुमति दें. यह अनुमति, ऐप्लिकेशन को ऐसे टास्क करने देती है जिन्हें पूरा करने में कुछ मिनटों से ज़्यादा का समय लग सकता है. जैसे, डाउनलोड और अपलोड करना. \n\nअगर यह अनुमति नहीं दी जाती है, तो सिस्टम यह तय करेगा कि कोई ऐप्लिकेशन कितने समय तक बैकग्राउंड में ऐसे टास्क कर सकता है."</string>
     <string name="keywords_long_background_tasks" msgid="5788956269136054574">"लंबे समय तक चलने वाले टास्क, डेटा ट्रांसफ़र, बैकग्राउंड टास्क"</string>
-    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"ShortcutManager में दर सीमित करने का टाइमर रीसेट करें"</string>
+    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"ShortcutManager एपीआई का दर सीमित करने का टाइमर रीसेट करें"</string>
     <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ShortcutManager दर सीमित करना रीसेट कर दिया गया है"</string>
     <string name="notification_suggestion_title" msgid="6309263655965785411">"कंट्रोल करें कि लॉक स्क्रीन पर आपको कौनसी सूचनाएं दिखें"</string>
     <string name="notification_suggestion_summary" msgid="7615611244249276113">"सूचना की सामग्री दिखाएं या छिपाएं"</string>
@@ -4355,7 +4355,7 @@
     <string name="settings_panel_title" msgid="346363079938069215">"सेटिंग पैनल"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"डेस्कटॉप मोड चालू करें"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"दूसरी स्क्रीन पर डेस्कटॉप मोड आज़माने की सुविधा चालू करें"</string>
-    <string name="enable_non_resizable_multi_window" msgid="6832903754625404477">"मल्टी-विंडो में विंडो का साइज़ न बदलने का विकल्प चालू करें"</string>
+    <string name="enable_non_resizable_multi_window" msgid="6832903754625404477">"मल्टी-विंडो में, साइज़ न बदलने वाले ऐप्लिकेशन दिखाने दें"</string>
     <string name="enable_non_resizable_multi_window_summary" msgid="3275763753261901999">"साइज़ न बदलने वाले ऐप्लिकेशन को मल्टी-विंडो (एक से ज़्यादा ऐप्लिकेशन, एक साथ) में दिखाने की अनुमति दें"</string>
     <string name="hwui_force_dark_title" msgid="4256904905631994219">"गहरे रंग वाली थीम को तुरंत लागू करने की सुविधा ओवरराइड करें"</string>
     <string name="hwui_force_dark_summary" msgid="6515748781487952769">"गहरे रंग वाली थीम को तुरंत लागू करने की सुविधा हमेशा चालू रहने के लिए ओवरराइड करती है"</string>
@@ -4661,7 +4661,7 @@
     <string name="ingress_rate_limit_no_limit_entry" msgid="8741098826008012163">"कोई सीमा नहीं"</string>
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"चाइल्ड प्रोसेस पर लगी पाबंदियां बंद करें"</string>
     <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"ऐप्लिकेशन में किसी प्रोसेस की वजह से चालू हुई दूसरी प्रोसेस के लिए, सिस्टम के संसाधन के इस्तेमाल पर लगी पाबंदियां बंद करें"</string>
-    <string name="enable_notes_role_title" msgid="7662702013496114763">"नोट्स रोल की सुविधा हर हाल में चालू करें"</string>
+    <string name="enable_notes_role_title" msgid="7662702013496114763">"नोट लेने की सुविधा हमेशा चालू रखें"</string>
     <string name="enable_notes_role_summary" msgid="136916915155048249">"नोट्स रोल की सुविधा का इस्तेमाल करके, नोट लेने के सिस्टम के इंटिग्रेशन चालू करें. अगर नोट्स रोल की सुविधा पहले से ही चालू है, तो कुछ और करने की ज़रूरत नहीं है."</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"ब्रॉडकास्ट"</string>
     <string name="bluetooth_broadcast_dialog_broadcast_app" msgid="1016617579194329005">"<xliff:g id="CURRENTAPP">%1$s</xliff:g> पर ब्रॉडकास्ट करें"</string>
