--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -1767,7 +1767,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Хандалтын тохиргоо"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Дэлгэц, харилцан үйлдэл, аудио"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"Харааны тохиргоо"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"Та энэ төхөөрөмжийг өөрийнхөө шаардлагад нийцүүлэн тохируулах боломжтой. Эдгээр сонголтуудыг дараа нь Тохиргоо хэсэгт өөрчлөх боломжтой."</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"Та энэ төхөөрөмжийг өөрийн хэрэгцээнд нийцүүлэн тохируулах боломжтой. Эдгээр хандалтын онцлогийг дараа нь Тохиргоонд өөрчлөх боломжтой."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Фонтын хэмжээг өөрчлөх"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Дэлгэц уншигч"</string>
     <string name="captions_category_title" msgid="574490148949400274">"Тайлбар"</string>
@@ -1791,7 +1791,7 @@
     <string name="bt_hci_snoop_log_filtered_mode_disabled_summary" msgid="8824952559433361848">"Энэ сонголтыг өөрчлөхийн тулд Bluetooth HCI snoop log горимыг Идэвхжүүлэн шүүсэн болгож тохируул"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
     <string name="talkback_summary" msgid="5820927220378864281">"Дэлгэц уншигчийг ерөнхийдөө хараагүй болон сул хараатай хүмүүст зориулсан"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"Дэлгэц дээрх зүйлсийг чанга уншуулахын тулд дарна уу"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"Дэлгэц дээрх зүйлсийг чанга уншуулахын тулд товшино уу"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Тайлбарын сонголт"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"Тайлбарын тохиргооны тухай"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Тайлбарын тохиргооны тухай нэмэлт мэдээлэл авах"</string>
