--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -1221,7 +1221,7 @@
     <string name="communal_settings_title" msgid="2845678473945902115">"共用"</string>
     <string name="communal_settings_summary" msgid="4923914136953940317">"共用設定"</string>
     <string name="apn_settings" msgid="4295467389400441299">"APN"</string>
-    <string name="apn_edit" msgid="2003683641840248741">"編輯接入點"</string>
+    <string name="apn_edit" msgid="2003683641840248741">"編輯存取點"</string>
     <string name="apn_not_set" msgid="8246646433109750293">"未設定"</string>
     <string name="apn_not_set_for_mvno" msgid="1141490067313964640">"未設定"</string>
     <string name="apn_name" msgid="6677695784108157953">"名稱"</string>
@@ -1906,7 +1906,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"透明"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"不透明"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"高對比文字"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"將文字顏色改成黑色或白色，盡量令文字和背景顏色有最大對比。"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"將文字顏色改成黑色或白色，與背景顏色形成最大對比。"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"自動更新螢幕放大設定"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"在應用程式轉場時更新螢幕放大設定"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"按開關按鈕結束通話"</string>
@@ -4234,7 +4234,7 @@
     <string name="carrier_settings_title" msgid="6959295328730560529">"流動網絡供應商設定"</string>
     <string name="cdma_lte_data_service" msgid="6937443423651347345">"設定數據服務"</string>
     <string name="mobile_data_settings_title" msgid="3927524078598009792">"流動數據"</string>
-    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"使用流動網絡存取數據"</string>
+    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"透過流動網絡使用數據"</string>
     <string name="mobile_data_settings_summary_auto_switch" msgid="7851549787645698945">"當進入覆蓋範圍內時，手機便會自動切換至此流動網絡供應商"</string>
     <string name="mobile_data_settings_summary_unavailable" msgid="9176513507571883986">"沒有可用的 SIM 卡"</string>
     <string name="calls_preference" msgid="2166481296066890129">"通話偏好設定"</string>
